--- a/CRM/templates/CRM/base.html
+++ b/CRM/templates/CRM/base.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html lang="zh-CN">
   <head>
     <meta charset="utf-8">
@@ -19,8 +22,16 @@
 
     <style type="text/css">
         body {
-            padding-top: 70px;
+            padding-top: 50px;
+
+            /*background-repeat:no-repeat;*/
+            background-position: center;
         }
+
+        .navbar {
+            margin-bottom: 20px;
+        }
+
     </style>
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
@@ -35,44 +46,102 @@
   </head>
 
   <body>
+  <div class="container">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container">
+              <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                          aria-expanded="false" aria-controls="navbar">
+                      <span class="sr-only">Toggle navigation</span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
+                  </button>
+                  <a class="navbar-brand" href="#">希希贝尔工作室</a>
+              </div>
+              <div id="navbar" class="collapse navbar-collapse">
+                  <ul class="nav navbar-nav">
+                      <li><a href="{% url 'index' %}">主页</a></li>
+                      <li><a href="{% url 'client_list' %}">客户档案</a></li>
+                      <li><a href="#record">咨询报告</a></li>
+                      <li><a href="{% url 'about' %}">关于『希希贝尔』</a></li>
+                      <li><a href="/admin">后台</a></li>
+                  </ul>
+              </div>
+              <!--/.nav-collapse -->
+          </div>
+      </nav>
+  </div>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+
+  {% block body %}
+      <div class="jumbotron">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">希希贝尔工作室</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li ><a href="#index">主页</a></li>
-              <li ><a href="#client">客户档案</a></li>
-              <li ><a href="#record">咨询报告</a></li>
-            <li><a href="#about">关于『希希贝尔』</a></li>
-            <li><a href="#contact">联系我们</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+          <h1>欢迎来到希希贝尔</h1>
+
+          <p>
+              工作室以“改变孩子，先改变父母”为咨询理念，开设主题工作坊与沙龙，帮助父母成长，学习亲子沟通理念与有效沟通技巧，做智慧父母；帮助孩子更优秀，通过一对一咨询与特色训练班提升孩子学习能力，让学习更轻松，更快乐！
+          </p>
+
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">关于创始人 &raquo;</a></p>
       </div>
-    </nav>
-
-    <div class="container">
-
-      <div class="starter-template">
-        {% block body %}{{ hail }}{% endblock %}
       </div>
 
-    </div><!-- /.container -->
+      <div class="container">
+          <!-- Example row of columns -->
+          <div class="row">
+              <div class="col-md-4">
+                  <h2>希希贝尔使命</h2>
+
+                  <p>让中国每一个家庭更幸福</p>
+
+                  <p>做智慧父母，成就优秀孩子</p>
+
+                  <p>专业、有爱、成长</p>
+
+                  <p><a class="btn btn-primary btn-lg" href="#" role="button">了解更多 &raquo;</a></p>
+              </div>
+
+              <div class="col-md-4">
+                  <h2>专题讲座</h2>
+
+                  <p>做智慧家长—陪伴孩子成长</p>
+
+                  <p>如何顺利度过青春期</p>
+
+                  <p>超级注意力达人</p>
+
+                  <p><a class="btn btn-primary btn-lg" href="#" role="button">了解更多 &raquo;</a></p>
+              </div>
+              <div class="col-md-4">
+                  <h2>系列课程</h2>
+
+                  <p>亲子关系工作坊</p>
+
+                  <p>超级学习法训练班</p>
+
+                  <p>超级注意力训练班</p>
+
+                  <p><a class="btn btn-primary btn-lg" href="#" role="button">了解更多 &raquo;</a></p>
+              </div>
+      </div>
+          <div>
+              <hr>
+          </div>
+
+          <footer>
+              <p>&copy; Sibyl Studio 2016</p>
+          </footer>
+      </div> <!-- /container -->
+  {% endblock %}
+
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
