--- a/CRM/templates/CRM/client_list.html
+++ b/CRM/templates/CRM/client_list.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends "CRM/base.html" %}
 
-</body>
-</html>
+{% load staticfiles %}
+
+{% block body %}
+    {% if client_list %}
+        <div class="panel panel-default">
+
+            <div class="panel-heading">客户档案</div>
+
+            <!-- Table -->
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th>客户编号</th>
+                    <th>姓名</th>
+                    <th>性别</th>
+                    <th>联系方式</th>
+                    <th>客户状态</th>
+                    <th>创建时间</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                {% for client in client_list %}
+                    <tr>
+                        <td>{{ client.code }}</td>
+                        <td>{{ client.name }}</td>
+                        <td>{{ client.get_gender_display }}</td>
+                        <td>{{ client.phone }}</td>
+                        <td>{{ client.get_client_status_display }}</td>
+                        <td>{{ client.created }}</td>
+                    </tr>
+                    </tbody>
+                {% endfor %}
+            </table>
+        </div>
+    {% else %}
+        <strong>目前还没有客户</strong>
+    {% endif %}
+{% endblock %}
