--- a/CRM/templates/CRM/index.html
+++ b/CRM/templates/CRM/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
 
-</body>
-</html>
+
+{% extends 'CRM/base.html' %}
+
+{% load staticfiles %}
+
+
