--- a/CRM/templates/CRM/base.html
+++ b/CRM/templates/CRM/base.html
@@ -83,7 +83,7 @@
               工作室以“改变孩子，先改变父母”为咨询理念，开设主题工作坊与沙龙，帮助父母成长，学习亲子沟通理念与有效沟通技巧，做智慧父母；帮助孩子更优秀，通过一对一咨询与特色训练班提升孩子学习能力，让学习更轻松，更快乐！
           </p>
 
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">关于创始人 &raquo;</a></p>
+          <p><a class="btn btn-primary btn-lg" href="{% url 'about' %}" role="button">关于创始人 &raquo;</a></p>
       </div>
       </div>
 
