--- a/CRM/templates/CRM/add_appointment.html
+++ b/CRM/templates/CRM/add_appointment.html
@@ -1,5 +1,3 @@
-
-
 {% extends 'CRM/base.html' %}
 
 {% load staticfiles %}
@@ -10,14 +8,13 @@
 
     <div class="container">
         <div class="col-md-3">
-            <h1>创建新客户</h1>
+            <h1>创建新预约</h1>
 
             <form id="client_form" role='form' method="post" action="." enctype="multipart/form-data">
 
                 {% csrf_token %}
-                {% bootstrap_form client_form size='sm' %}
+                {% bootstrap_form appointment_form size='sm' %}
                 {% buttons submit='提交' reset='重置' layout='horizontal' %}{% endbuttons %}
-
             </form>
 
         </div>
