--- a/CRM/templates/CRM/base.html
+++ b/CRM/templates/CRM/base.html
@@ -29,7 +29,7 @@
         }
 
         .navbar {
-            margin-bottom: 20px;
+            margin-bottom: 0px;
         }
 
     </style>
@@ -47,7 +47,7 @@
 
   <body>
   <div class="container">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+      <nav class="navbar navbar navbar-static-top" style="opacity:5">
           <div class="container">
               <div class="navbar-header">
                   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
@@ -62,8 +62,25 @@
               <div id="navbar" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav">
                       <li><a href="{% url 'index' %}">主页</a></li>
-                      <li><a href="{% url 'client_list' %}">客户档案</a></li>
-                      <li><a href="#record">咨询报告</a></li>
+                      <li><a href="#">专题讲座</a></li>
+                      <li><a href="#">系列课程</a></li>
+
+                      <li class="dropdown">
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                             aria-expanded="false">客户管理 <span class="caret"></span></a>
+                          <ul class="dropdown-menu">
+                              <li class="dropdown-header">客户信息</li>
+                              <li><a href={% url 'client_list' %}>客户列表</a></li>
+                              <li><a href={% url 'add_client' %}>创建新客户</a></li>
+                              <li><a href={% url 'appointmen_list' %}>咨询预约管理</a></li>
+                              <li role="separator" class="divider"></li>
+                              <li class="dropdown-header">报告与回访</li>
+                              <li><a href="#">咨询报告管理</a></li>
+                              <li><a href="#">回访管理</a></li>
+                          </ul>
+                      </li>
+
+
                       <li><a href="{% url 'about' %}">关于『希希贝尔』</a></li>
                       <li><a href="/admin">后台</a></li>
                   </ul>
@@ -75,8 +92,9 @@
 
 
   {% block body %}
-      <div class="jumbotron">
       <div class="container">
+          <div class="jumbotron" style="background: #CCFF99">
+
           <h1>欢迎来到希希贝尔</h1>
 
           <p>
