--- a/CRM/templates/CRM/client_detail.html
+++ b/CRM/templates/CRM/client_detail.html
@@ -1,10 +1,79 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends 'CRM/base.html' %}
 
-</body>
-</html>
+{% load staticfiles %}
+
+{% block body %}
+    <div class="container">
+        {% if client %}
+            <div class="container">
+                <h3>客户详细信息</h3>
+                <ul>
+                    <li>姓名： {{ client.name }}</li>
+                    <li>客户编号：{{ client.code }}</li>
+                    <li>性别：{{ client.get_gender_display }}</li>
+                    <li>出生日期：{{ client.birthday }}</li>
+                    <li>客户类型：{{ client.get_client_type_display }}</li>
+                    <li>住址：{{ client.address }}</li>
+                    <li>客户状态：{{ client.get_client_status_display }}</li>
+                    <li>从何处知道我们：{{ client.lead_source }}</li>
+                    <li>VIP级别：{{ client.get_vip_class_display }}</li>
+                    {% if client.active %}
+                        <li>是否在案用户:是</li>
+                    {% else %}
+                        <li>是否在案用户:否</li>
+                    {% endif %}
+                </ul>
+            </div>
+            <hr/>
+
+            <div class="container">
+                <h3>客户预约记录</h3>
+                {% if appointments %}
+
+                    <table class="table table-hover">
+                        <thead>
+                        <tr>
+                            <th>预约主题</th>
+                            <th>预约日期</th>
+                            <th>预约时段</th>
+                            <th>确认状态</th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        {% for appointment in appointments %}
+                            <tr>
+                                <td>{{ appointment.subject }}</td>
+                                <td>{{ appointment.date }}</td>
+                                <td>{{ appointment.get_time_slot_display }}</td>
+                                <td>{{ appointment.get_confirm_status_display }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+
+                {% else %}
+                    <div class="text-warning">尚无预约记录</div>
+                {% endif %}
+            </div>
+            <hr/>
+            <div class="container">
+                <h3>客户来访记录</h3>
+                {% if records %}
+                    {% for record in records %}
+                        <li>{{ record.title }} | {{ record.created }} | 第{{ record.visit }} 次来访</li>
+                    {% endfor %}
+                {% else %}
+                    <div class="text-warning">尚无客户来访记录</div>
+                {% endif %}
+            </div>
+            </div>
+
+        {% else %}
+            <div class="text-warning">
+                <h1>用户信息不存在</h1>
+            </div>
+        {% endif %}
+
+
+{% endblock %}
