--- a/CRM/templates/CRM/appointment.html
+++ b/CRM/templates/CRM/appointment.html
@@ -36,6 +36,7 @@
                         <th>预约日期</th>
                         <th>预约时段</th>
                         <th>确认状态</th>
+                        <th>操作</th>
                     </tr>
                     </thead>
                     {% for appointment in list %}
@@ -46,6 +47,12 @@
                             <td>{{ appointment.date }}</td>
                             <td>{{ appointment.get_time_slot_display }}</td>
                             <td>{{ appointment.get_confirm_status_display }}</td>
+                            <td>
+                                <button type="button" class="btn btn-default btn-xs pull-right ">
+                                    <span class="glyphicon glyphicon-edit " aria-hidden="true"></span>
+                                    编辑
+                                </button>
+                            </td>
                         </tr>
                         </tbody>
                     {% endfor %}
