--- a/CRM/templates/CRM/base.html
+++ b/CRM/templates/CRM/base.html
@@ -75,7 +75,7 @@
                               <li><a href={% url 'appointmen_list' %}>咨询预约管理</a></li>
                               <li role="separator" class="divider"></li>
                               <li class="dropdown-header">报告与回访</li>
-                              <li><a href="#">咨询报告管理</a></li>
+                              <li><a href="{% url 'records_list' %}">咨询报告管理</a></li>
                               <li><a href="#">回访管理</a></li>
                           </ul>
                       </li>
