--- a/CRM/templates/CRM/base.html
+++ b/CRM/templates/CRM/base.html
@@ -72,7 +72,7 @@
                               <li class="dropdown-header">客户信息</li>
                               <li><a href={% url 'client_list' %}>客户列表</a></li>
                               <li><a href={% url 'add_client' %}>创建新客户</a></li>
-                              <li><a href={% url 'appointmen_list' %}>咨询预约管理</a></li>
+                              <li><a href={% url 'appointment_list' %}>咨询预约管理</a></li>
                               <li role="separator" class="divider"></li>
                               <li class="dropdown-header">报告与回访</li>
                               <li><a href="{% url 'records_list' %}">咨询报告管理</a></li>
