--- a/CRM/templates/CRM/client_list.html
+++ b/CRM/templates/CRM/client_list.html
@@ -53,10 +53,12 @@
                         <td>{{ client.get_vip_class_display }}</td>
                         <td>{{ client.created }}</td>
                         <td>
+                            <a href="{% url 'edit_client' client.code %}">
                             <button type="button" class="btn btn-default btn-xs">
                                 <span class="glyphicon glyphicon-edit " aria-hidden="true"></span>
                                 编辑
                             </button>
+                            </a>
                         </td>
                     </tr>
                     </tbody>
