--- a/CRM/templates/CRM/client_detail.html
+++ b/CRM/templates/CRM/client_detail.html
@@ -1,6 +1,7 @@
 {% extends 'CRM/base.html' %}
 
 {% load staticfiles %}
+{% load bootstrap3 %}
 
 {% block body %}
     <div class="container">
@@ -30,7 +31,7 @@
                 <h3>客户预约记录</h3>
                 {% if appointments %}
 
-                    <table class="table table-hover">
+                    <table class="table table-hover table-striped">
                         <thead>
                         <tr>
                             <th>预约主题</th>
@@ -56,6 +57,9 @@
                     <div class="text-warning">尚无预约记录</div>
                 {% endif %}
             </div>
+            <div align="center">
+                {% bootstrap_pagination appointments size="small" %}
+            </div>
             <hr/>
             <div class="container">
                 <h3>客户来访记录</h3>
@@ -67,13 +71,57 @@
                     <div class="text-warning">尚无客户来访记录</div>
                 {% endif %}
             </div>
+            <div align="center">
+                {% bootstrap_pagination records size="small" %}
+            </div>
+            <hr>
+            <div class="container">
+                <h3>客户回访记录</h3>
+
+
+                <table class="table table-condensed table-hover table-striped ">
+                    <thead>
+                    <tr>
+                        <th>回访日期</th>
+                        <th>回访内容</th>
+                        <th>创建时间</th>
+                    </tr>
+                    </thead>
+                    {% if returning_calls %}
+                        <tbody>
+                        {% for recall in returning_calls %}
+                            <tr>
+                                <td>{{ recall.call_date }}</td>
+                                <td>{{ recall.comment }}</td>
+                                <td>{{ recall.created_date }}</td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                        </table>
+                        </div>
+                    {% else %}
+                        <div class="text-warning">尚无回访记录</div>
+                    {% endif %}
+            </div>
+            <div align="center">
+                {% bootstrap_pagination returning_calls size="small" %}
             </div>
 
+            <div class="container">
+                <div class="col-md-3">
+                    <h5>创建新回访记录</h5>
+
+                    <form id="RecallForm" role='form' method="post" action="." enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {% bootstrap_form recallform size='sm' %}
+                        {% buttons submit='提交' reset='重置' layout='horizontal' %}{% endbuttons %}
+                    </form>
+                </div>
+            </div>
         {% else %}
             <div class="text-warning">
                 <h1>用户信息不存在</h1>
             </div>
         {% endif %}
-
-
+    </div>
 {% endblock %}
