--- a/CRM/templates/CRM/records_detail.html
+++ b/CRM/templates/CRM/records_detail.html
@@ -12,10 +12,13 @@
             <div class="panel-heading">报告明细
                 <a href="{% url 'records_list' %}">
                     <button type="button" class="btn btn-default btn-xs pull-right ">
-                        <span class="glyphicon glyphicon-list " aria-hidden="true"></span>
+                        <span class="glyphicon glyphicon-list" aria-hidden="true">
+
+                        </span>
                         回到目录页
                     </button>
-                </a></div>
+                </a>
+            </div>
 
             {% if record %}
                 <p>客户:{{ record.client.name }}</p>
